# _itk_python

./: pyproject.toml  urls.txt
src/module_1/tasks/: 18_lru_cache.py  25_singleton_meta.py  25_singleton_module_check.py  25_singleton_new.py  26_meta_attributes.py  28_created_at.py  additional_task_registry_meta.py  additional_task_serializer_meta.py  additional_task_serializer_meta_test.py  singleton_module.py
src/module_1/topics/: 02_int_not_mutable.py  03_list_placeholder_init_once_on_params.py  04_string_not_mutable.py  05_list_cant_be_dict_key.py  06_cant_add_element_to_frozenset.py  07_coping.py  08_float_decimal.py  09_dict_keys.py  10_scopes.py  11_scopes_global.py  12_scopes_nonlocal.py  13_recursion.py  15_decorators.py  16_decorators_with_args.py  19_dunder_methods.py  21_mixins.py  22_mro.py  23_metaclasses.py  24_GC.py
src/module_2/tasks/: 08_search.py
src/module_2/topics/: 01_list_tuple_diff.py  07_sort.py  10_hash_table.py
src/module_3/tasks/: a_http_advanced.py  a_http_base.py
src/module_3/topics/: 3_asyncio.py  4_async_await.py  5_gather_run.py  6_create_task.py
src/module_4/tasks/: 10_MP.py
src/module_4/topics/: 06_event.py
src/module_6/: asgi.py  wsgi.py
